--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.487.0",
     "mitt": "^3.0.1",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
